--- a/admin_tools/menu/static/admin_tools/css/menu.css
+++ b/admin_tools/menu/static/admin_tools/css/menu.css
@@ -110,7 +110,7 @@ div.breadcrumbs {
 #header ul#navigation-menu li.first a {
     margin: 0 0 0 12px;
     text-indent: 14px;
-    background: transparent url(../images/admin-tools.png) no-repeat 0 -380px;
+    background: transparent url(../images/admin-tools.png) no-repeat 0 -379px;
 }
 
 #header ul#navigation-menu li:hover,
@@ -213,5 +213,51 @@ div.breadcrumbs {
 
     .filtered #toolbar {
         margin-right: 0;
+    }
+}
+
+/* Dark mode tweaks */
+
+@media (prefers-color-scheme: dark) {
+    #header #navigation-menu {
+        background-color: #1f1f1f;
+        border-color: #333;
+    }
+
+    #header #navigation-menu a {
+    }
+
+    #header ul#navigation-menu li a,
+    #header ul#navigation-menu li ul li ul,
+    #header ul#navigation-menu li ul li a {
+        border-color: #333;
+        color: #ccc;
+    }
+
+    #header ul#navigation-menu li.disabled a,
+    #header ul#navigation-menu li.disabled a:hover {
+        background-color: #1f1f1f;
+        color: #444;
+    }
+
+    #header ul#navigation-menu li:hover,
+    #header ul#navigation-menu li.over,
+    #header ul#navigation-menu li.selected {
+        background-color: #111;
+        color: #fff;
+    }
+
+    #header ul#navigation-menu li:hover>ul li,
+    #header ul#navigation-menu li.over>ul li,
+    #header ul#navigation-menu li ul li:hover>ul li,
+    #header ul#navigation-menu li ul li.over>ul li {
+        background-color: #111;
+    }
+
+    #header ul#navigation-menu li ul li:hover,
+    #header ul#navigation-menu li ul li.over,
+    #header ul#navigation-menu li ul li ul li:hover,
+    #header ul#navigation-menu li ul li ul li.over {
+        background-color: #111;
     }
 }
